fix momentum scrolling on iphone

--- a/assets/styles/main.styl
+++ b/assets/styles/main.styl
@@ -6,3 +6,4 @@ main
   overflow-x hidden
   overflow-y auto
   height 100vh
+  -webkit-overflow-scrolling: touch;
